// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`reconstructReceipt android-v1-mlkit-ocr-optimized-german-playground-receipt.json 1`] = `
"                         LEMITEX GMBH
                     BEILSTEINER STR. 109
                         12681 BERLIN
                          1. Kopie
         4 x 10, 50
        ERWACHSEN SA. SO.
        2 x 14, 50                            42, 00
        KIND SA. S0.
                                              29, 00
        Total
                                              71, 00
        Nettoumsatz
                                        59, 66
        Umsatz 19% inkl.
                                        71. 00
        MwSt 19%
                                        11,34
        Karte
                                        71, 00
       Seq. No. : 145642 | S/N: 2842583
       Start/End: 28. 12. 2025 15:57 | 28. 12. 2025
       15:57
       Transaction: 10390 Signature counter:
       29682
      Zertifikat Seriennr. :
      4C38A5B4BB15E3448966BB948AAC45FBCE9EDA6CD2
      FE3E5EA931FF5A1FO8FB65
       F7NW8-StpdU-iZPCC-dOep0-JMDtE-gRkGw-KOSND-
      8ucDC-xClhv-R+Csh-/S1xE-a5BIk-2Hi7T-/0XHG-
       gJCpC-gH51Q-fk3s3-w+7nC-86+lu-MHKKn-OM3dX-
      lbgro-19RE6-IC5Ke-yujnD-zSR
     15:57 28. 12. 2025 3 Bed 3
                                            44170
                   * Vielen Dank x
          MIT EINTRITT IN DAS BIM & BOOM
             KINDERSPIELLAND AKZEPTIERT
          JEDER BESUCHER UNSERE HAUSORDNUNG
                SOWIE HYGIENEREGELN."
`;

exports[`reconstructReceipt android-v1-mlkit-ocr-optimized-walmart-receipt.json 1`] = `
"            Walmart*
      Save money. Live better.
                 (330 ) 339 3991
             MANAGER DIANA EARNEST
                231 BLUEBELL DR SW
           NEW PHILADELPHIA OH 44663
   ST# 02115 OP# 009044 TE# 44 TR# 01301
   PET TOY          004747571658             1.97 X
   FLOPPY PUPPY 004747514846                 1.97 X
   SSSUPREME S      070060332153             4.97 X
   2.5 SQUEAK       084699803238             5.92 X
   MUNCHY DMBEL     0681131 08796            3.77 X
   DOG TREAT        00711901 3654            2.92 X
   PED PCH 1        002310011802             0.50 X
   PED PCH 1        00231 0011802            0.50 X
   COUPON 23100     052310037000             1.00-o
   HNYMD SIORES     088491226837 F           3.98 O
   FRENCH DRSNG     004132100655 F           1.98 O
   3 ORANGES        001466835001 F           5.47 N
   BABY CARROTS     003338366602 I           1.48 N
   COLLARDS         000000004614KI           1.24 N
   CALZONE          005208362080 F           2.50 o
   Mi RVW MNT 003399105848                  19.77 X
   STKOBRLPLABL 001558679414                 1.97 X
   STKOBRLPLABL 001558679414                 1.97 X
   STKO SUNFLWR 001558679410                 0.97 X
   STKO SUNFLWR 001558679410                 0.97 X
   STKO SUNFLWR 001558679410                 0.97 X
   STKO SUNFLWR 001558679410                 0.97 X
   BLING BEADS 076594060699                  0.97 X
   GREAT VALUE      007874203191 F           9.97 o
   LIPTON           001200011224     F       4.48 X
   DRY DOG          002310011035            12.44 X
                           SUBTOTAL         93.62
               TAX 1      6.750 %            4.59
                               TOTAL        98.21
                        VISA TEND           98.21
   US DEBIT                        ****  9166    I 0
   APPROVAL # 572868
   REF # 720900544961
   TRÀNS ID       387209239650894
   VALIDATION 87HS
   PAYMENT SERVICE - E
   AID A0000000980840
   TC 51319CA81DC22BC7
   TERMINAL # SC010764
   *Signature verified
              07/28/17         02:39:48
                        CHANGE DUE           0.00
                 # ITEMS SOLD 25
        TC# 0443 0223 1059 8001 5140
    Low Prices You Can Trust. Every Day.
              07/28/17         02:39:48
               ***CUSTOVER COPY***"
`;

exports[`reconstructReceipt android-v2-mlkit-ocr-optimized-german-playground-receipt.json 1`] = `
"LEMITEX   GMBH
BEILSTEINER  STR.    109
12681 BERLIN
1.     Kopie
4   x   10, 50
ERWACHSEN  SA.     SO.          42, 00
2  x   14, 50
KIND   SA.     S0.
29,  00
Total
Nettoumsatz          71,  00
Umsatz          59, 66
19%   inkl.          71.  00
MwSt    19%
Karte          11,34
71,    00
Seq. No.  :    145642     | S/N:    2842583
Start/End:    28.  12. 2025   15:57      |  28.  12. 2025
15:57
Transaction:    10390          Signature  counter:
29682
Zertifikat    Seriennr.   :
4C38A5B4BB15E3448966BB948AAC45FBCE9EDA6CD2
FE3E5EA931FF5A1FO8FB65
F7NW8-StpdU-iZPCC-dOep0-JMDtE-gRkGw-KOSND
8ucDC-xClhv-R+Csh-/S1xE-a5BIk-2Hi7T-/0XHG
gJCpC-gH51Q-fk3s3-w+7nC-86+lu-MHKKn-OM3dX
lbgro-19RE6-IC5Ke-yujnD-zSR
15:57   28.   12. 2025    3   Bed   3          44170
*    Vielen    Dank    x
MIT   EINTRITT   IN   DAS   BIM   &   BOOM
KINDERSPIELLAND   AKZEPTIERT
JEDER BESUCHER  UNSERE  HAUSORDNUNG
SOWIE   HYGIENEREGELN."
`;

exports[`reconstructReceipt android-v2-mlkit-ocr-optimized-walmart-receipt.json 1`] = `
"Walmart*
Save  money.  Live  better.
(330        )          339          3991
MANAGER       DIANA        EARNEST
231        BLUEBELL        DR        SW
NEW        PHILADELPHIA       OH        44663
ST#       02115       OP#       009044       TE#       44       TR#       01301
PET       TOY          004747571658          1.97        X
FLOPPY        PUPPY         004747514846          1.97        X
SSsupREME        S          070060332153          4.97        X
2.5          SQUEAK          084699803238          5.92        X
MUNCHY        DMBEL          0681131   08796          3.77         X
DOG        TREAT          00711901 3654          2.92        X
PED        PCH        1          002310011802          0.50         X
PED        PCH          00231   0011802          0.50        X
1
COUPON        23100          052310037000          1.00-o
HNYMD        SIORES          088491226837         F          3.98         O
FRENCH       DRSNG        004132100655         F          1.98         O
3          ORANGES          001466835001          5.47         N
F
BABY        CARROTS          003338366602         I          1.48        N
COLLARDS          000000004614KI          1.24         N
CALZONE          005208362080        F          2.50        o
Mi       RVW       MNT          003399105848          19.77        X
STKOBRLPLABL        001558679414          1.97        X
STKOBRLPLABL        001558679414          1.97        X
STKO       SUNFLWR        001558679410          0.97        X
STKO        SUNFLWR        001558679410          0.97        X
STKO       SUNFLWR        001558679410          0.97         X
STKO      SUNFLWR        001558679410          0.97        X
BLING        BEADS          076594060699          0.97          X
GREAT        VALUE          007874203191         F          9.97         o
LIPTON          001200011224          F          4.48         X
DRY        DOG          002310011035          12.44        X
SUBTOTAL          93.62
TAX        1          6.750        %          4.59
TOTAL          98.21
VISA          TEND          98.21
US         DEBIT          ****         9166          I         0
APPROVAL        #        572868
REF      #       720900544961
TRÀNS         ID          387209239650894
VALIDATION          87HS
PAYMENT        SERVICE          -          E
AID        A0000000980840
TC         51319CA81DC22BC7
TERMINAL       #       SC010764
*Signature      verified
07/28/17          02:39:48
CHANGE       DUE          0.00
#       ITEMS        SOLD       25
TC#        0443        0223        1059        8001        5140
Low      Prices      You      Can     Trust.        Every      Day.
07/28/17          02:39:48
***CUSTOVER        COPY***"
`;

exports[`reconstructReceipt ios-v1-vnrecognize-ocr-optimized-german-playground-receipt.json 1`] = `
"                        LEMITEX GMBH
                    BEILSTEINER STR. 109
                        12681 BERLIN
                          1. Kopie
         4 x 10, 50
        ERWACHSEN SA. SO.
        2 × 14,50                             42, 00
        KIND SA. SO
        ニニニニニニー。                              29, 00
        Total
        Nettoumsatz                          71, 00
                                       59, 66
       Umsatz 19% inkl.
                                       71, 00
       MwSt 19%
                                       11, 34
       Karte
                                        71, 00
       Seq. No. : 145642 / S/N: 2842583
       Start/End: 28.12.2025 15:57 | 28. 12. 2025
       15:57
       Transaction: 10390 | Signature counter:
       29682
      Zertifikat Seriennr. :
      4C38A5B4BB15E3448966BB948AAC45FBCE9EDA6CD2
      FE3E5EA931FF5A1F08FB65
      F7NW8-StpdU-iZPCC-d0ep0-JMDtE-gRkGw-KQSND-
      8ucDC-xClhv-R+Csh-/S1xE-a5BIk-2Hi 7T-/OXHG-
     gJCpC-qH5IQ-fk3s3-w+ 7nC-86+Uu-MHKKn-OM3dX-
     1bgro-19RE6- IC5Ke-yujnD-zSR
     15:57 28. 12. 2025 3 Bed 3
                                            44170
                  * Vielen Dank *
          MIT EINTRITT IN DAS BIM & BOOM
             KINDERSPIELLAND AKZEPTIERT
          JEDER BESUCHER UNSERE HAUSORDNUNG
                SOWIE HYGIENEREGELN."
`;

exports[`reconstructReceipt ios-v1-vnrecognize-ocr-optimized-primark-receipt.json 1`] = `
"                    Primark
              Primark Mode Ltd & CO KG
                Hainstrasse 21 - 23
                    04109 Leipzig
              USt-Id. Nr,: DE276960607
                   VERKAUFT
  211749518 Schreibwaren                     1,00 B
   211171123 Sport-Sweatshirt               7,00 B
  Summe                                    8,00
  Debit MasterCard                          8,00
   Karten Nr             **x*********0845
   Händler-Nr.          ******0198
   Auth. -Ni.           NLBFQP
   App. Nr              A0000000041010
   Kassenterminal-ID ****1006
   PAN-Laufnr.
   Quelle               kontaktlos
   Verifizierung         nicht ausgeführt
                 (MwSt.-Obersicht)
  Code MwSt. -Satz Artikelbetras      MwSt. -Betr.
             19,00%             6,72           1,28
  SUMMEN                        6,72           1,28
  Filiale: 0820        Kasse: 014   Trans. : 325879
  Datum: 10.12.2025    Zeit: 18:05 Ben.: 10348987
                Verkaufte Artikel: 2
             Zurückgegebene Artikel: 0
              Primark Mode Ltd & Co. KG
                   Kennedyplatz 2
                     45127 Essen
                      PRIMARK
     Wie waren Deine heutigen Eindrücke in
     unserem Store? Nimm an unserer kurzen
    Online-Umfrage teil und Du erhältst die
   Chance auf eine Geschenkkarte in Höhe von
          100 € (monatliche Verlosung),
     Wir freuen uns auf Dein Feedback unter
                www.tellprimark.de.
     *Teilnahme ab 18, Teilnahmebedingungen
     und Datenschutzbestimmungen findest Du
             auf www.tellprimark.de.
                       Rückgabe
   Die Erstattung/der Umtausch der gekauften
    Artikel ist bis zum 30,01.2026 möglich.
   Eine Erstattung oder ein Umtausch ist nur
      in dem Land möglich, in dem Sie die
   Artikel gekauft haben. Die Details finden
              Sie auf der Rückseite
                    VIELEN DANK"
`;

exports[`reconstructReceipt ios-v2-recognizedocuments-ocr-optimized-primark-receipt.json 1`] = `
"                   Primark
              Primark Mode Ltd & CO KG
                Hainstrasse 21  - 23
                   04109 Leipzig
             USt-Td. Nr.: DE276960607 VERKAUFT
  211749518 Schreibwaren                    1,00
  211171123 Sport-Sweatshirt                7,00 B
  Summe                                     8,00
  Debit MasterCard                          8,00
   Karten-Nr            *******x****0845
   Handler-Nr.          ******0198
   Auth. -Nr            NLBFQP
   App. Nr              A0000000041010
   Kassenterminal-ID ****1006
   PAN-Laufnr.
   Quelle               kontaktlos
   Verifizierung        nicht ausgeführt
                 (MwSt.-Obersicht)
  Code MwSt. -Satz Artikelberras
MwSt. -Betr.
            19,00%             6,72           1,28
  SUMMEN                       6,72           1,28
  Filiale: 0820        Kasse: 014   Trans. : 325879
  Datum: 10.12.2025    Zeit: 18:05 Ben.: 10348987
                Verkaufte  Artikel: 2
             Zurückgegebene Artikel: 0
              Primark Mode Ltd & Co.KG
                   Kennedyplatz 2
                     45127 Essen
                       PRIMARK
   Wie waren Deine heutigen Eindrücke in unserem Store?
     Wir freuen uns auf Dein Feedback unter
               www.tellprimark.de.
     *Teilnahme ab 18. Teilnahmebedingungen und Datensch
                       Rückgabe
   Die Erstattung/der Umtausch der gekauften Artikel ist
   Eine Erstattung oder ein Umtausch ist nur in dem Land
   Artikel gekauft haben.    Die Details finden
              Sie auf der Rückseite
                    VIELEN DANK
          08200143258790001121025003"
`;

exports[`reconstructReceipt ios-v2-vnrecognize-ocr-optimized-german-playground-receipt.json 1`] = `
"LEMITEX GMBH
BEILSTEINER STR.109
12681 BERLIN
1. Kopie
4 x10, 50
ERWACHSEN SA. SO.          42,00
2 x 14,50
KIND SA. SO          29, 00
ニニニニニニご
Total          ニニニニ=
Nettoumsatz          71,00
Umsatz 19% inkl.          59, 66
MwSt 19%          71,00
Karte          11, 34
71,00
Seq. No.: 145642 | S/N: 2842583
Start/End: 28.12.2025 15:57 | 28.12.2025
15:57
Transaction: 10390 | Signature counter:
29682
Zertifikat Seriennr. :
4C38A5B4BB15E3448966BB948AAC45FBCE9EDA6CD2
FE3E5EA931FF5A1F08FB65
F7NW8-StpdU-iZPCC-d0ep0-JMDtE-gRkGw-KQSND-
8ucDC-xClhv-R+Csh-/S1xE-a5BIk-2Hi7T-/OXHG-
gJCpC-qH5IQ-fk3s3-w+7nC-86+Uu-MHKKn-OM3dX-
Tbgro-19RE6-IC5Ke-yujnD-zSR
15:57 28. 12. 2025 3 Bed 3          44170
* Vielen Dank *
MIT EINTRITT IN DAS BIM & BOOM
KINDERSPIELLAND AKZEPTIERT
JEDER BESUCHER UNSERE HAUSORDNUNG
SOWIE HYGIENEREGELN."
`;
